Upgrade jetty to 12.x